[FIX] Update blog-post-card szie on small devices.

--- a/src/app/home/components/blog-post-list/blog-post-list.component.less
+++ b/src/app/home/components/blog-post-list/blog-post-list.component.less
@@ -1,26 +1,27 @@
 @import '../../../../styles.less';
 
 .blog-post-list {
-
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   align-items: flex-start;
 
   > .blog-post-card {
-
     position: relative;
     width: 100%;
     padding: 0 15px 30px;
 
-    flex: 1 1 50%;
-    max-width: 50%;
+    flex: 1 1 100%;
+    max-width: 100%;
+
+    @media screen and (min-width: @screen-sm) {
+      flex: 1 1 50%;
+      max-width: 50%;
+    }
 
     @media screen and (min-width: @screen-lg) {
       flex: 1 1 33%;
       max-width: 33%;
     }
-
   }
-
 }
